@@ -9,6 +9,8 @@ TODO:
 
     * Framework changes:
        * Value: don't perform value check when fetching standard or default value
+       * Backend/Plainfile: now support list element in the form of multi line file.
+         Each line of the file is a value of the list.
 
 2011-04-07 Dominique Dumont  <domi.dumont@free.fr> 1.241
     
